--- a/templates/pages/registration.html
+++ b/templates/pages/registration.html
@@ -61,7 +61,7 @@
                                     Следующий шаг
                                 </button>
                                 <p class="sign__link">
-                                    Уже есть аккаунт? <a href="#">Войти</a>
+                                    Уже есть аккаунт? <a href="{% url 'login' %}">Войти</a>
                                 </p>
                             </div>
                             <div class="swiper-slide">
