--- a/templates/pages/sign.html
+++ b/templates/pages/sign.html
@@ -15,12 +15,204 @@
 
 {% block content %}
 
-<form action="" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">submit</button>
-</form>
+
+    <div class="sign sign__flex">
+        <div class="sign__wrap">
+            <div class="sign__inner">
+                <div class="sign__head">
+                    <div class="sign__logo">
+                        <img src="{% static 'img/png/logo.png' %}" alt="">
+                    </div>
+                </div>
+                <h2 class="sign__title">
+                    Войти
+                </h2>
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <div class="fields {% if form.email.errors %}error{% endif %}">
+{#                        Если E-mail неправильный, добавить класс "error" на fields#}
+{#                        и раскомментировать email__error#}
+                        <label for="sign-email" class="sign__label">
+                            Ваш электронный адрес
+                        </label>
+<!--                        <input required type="text" id="sign-email" class="sign__input"-->
+<!--                               placeholder="Email или ваша почта">-->
+                        {{ form.email }}
+
+<div>
+     {% for value in form.errors.email %}
+        <p class="email__error">
+                       {{ value }}
+         </p>
+    {% endfor %}
+</div>
+                    </div>
+                    <div class="fields {% for e in form.non_field_errors %}
+                        {% if e %}error{% endif %}
+                        {% endfor %}">
+{#                        Если пароль неправильный, добавить класс "error" на fields#}
+{#                        и раскомментировать forget__password #}
+                        <label for="sign-password" class="sign__label">
+                            Ваш пароль
+                        </label>
+                        <div class="sign__input-wrap">
+<!--                            <input required type="password" id="sign-password" class="sign__input"-->
+<!--                                   placeholder="Пароль">-->
+                            {{ form.password }}
+                            <div>
+                                {% for key in form.non_field_errors %}
+                                <p class="email__error">
+                                    {{ key }}
+                                    {{ value }}
+                                </p>
+                                {% endfor %}
+                            </div>
+                        <div class="sign__eye"></div>
+                        </div>
+                        {% for e in form.non_field_errors %}
+                        {% if e %}
+
+
+
+                        <div style="" class="forget__password" data-micromodal-trigger="forget-password">
+                            <span>Забыли пароль?</span>
+                        </div>
+
+                        {% endif %}
+                        {% endfor %}
+                             {% if form.email.errors %}
+
+                        {% endif %}
+
+
+
+                    </div>
+                    <button type="submit" class="sign__btn">
+                        Войти
+                    </button>
+                </form>
+                <p class="sign__link">
+                    Нет аккаунта? <a href="{% url 'register' %}">Зарегистрироваться</a>
+                </p>
+            </div>
+        </div>
+        <div class="sign__img">
+            <img src="{% static 'img/png/delivery.png' %}" alt="">
+        </div>
+    </div>
+
+                    {#    модалка забыли пароль  #}
+    <div class="modal micromodal-slide" id="forget-password" aria-hidden="true">
+        <div class="modal__overlay sign__modal-overlay" tabindex="-1" data-micromodal-close>
+            <div class="modal__container" role="dialog" aria-modal="true">
+                <div class="area__modal" id="form-modal">
+                    <div class="modal__close" data-micromodal-close></div>
+                    <h2 class="modal__title">
+                        Введите ваш используемый
+                        Email
+                    </h2>
+                    <p class="modal__subtitle">
+                        На ваш email будет отправлено письмо
+                        с ссылкой для смены пароля
+                    </p>
+                    <form  action="" method="POST">
+                         {% csrf_token %}
+                        <div class="fields" id="field">
+                            <label for="sign-email" class="sign__label">
+                                Текущий Email!!!!!!!
+                            </label>
+
+<!--                            <input required type="text" id="sign-email" class="must sign__input"-->
+<!--                                   placeholder="Primer@gmail.com">-->
+                            {{ form1 }}
+                        </div>
+
+                        <button type="submit" name="email" id="send" class="personal__btn modal__btn">
+                            Отправить
+                        </button>
+                    </form>
+                </div>
+
+                                    {#    модалка успешного отправления  #}
+                <div class="area__modal verify-modal" id="email-verify-modal" style="display: none; flex-direction: column; align-items: center; text-align: center;">
+                    <div class="modal__close" data-micromodal-close></div>
+                    <img src="{% static 'img/png/verify-email.png' %}" alt="Verify Email">
+                    <h2 class="modal__title">
+                        На ваш E-mail почту оправлена ссылка
+                    </h2>
+                    <div class="modal__subtitle">
+                        Если не обнаружили письма,
+                        то проверьте папку "Спам"
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
+
+
 {% endblock %}
 
 {% block scripts %}
+<script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
+<script>
+
+var submitted = false;
+var form = document.getElementById("email-form");
+form.onsubmit = function(){
+   if(!submitted){
+       submitted = false;
+       //some ajax function
+   }
+
+   return false;
+}
+</script>
+
+
+<script>
+    $('#send').on('click', function (){
+<!--        let email = document.getElementById('sign-email').value;-->
+        let email = $('.must')[0].value;
+
+        let data = {
+                let result = data['data']
+            email: email
+                let result = data['data']
+        }
+        console.log(email);
+
+        console.log('Script is avaiable');
+
+        $.ajax({
+            method:"GET",
+            dataType: "json",
+            data: data,
+            url: "",
+            success: function(data){
+                    console.log('Script is right');
+
+                let result = data['data']
+                if (result){
+                    console.log(result);
+                    $('#email-verify-modal').css('display', 'flex');
+                    $('#form-modal').css('display', 'none');
+                } else {
+                    console.log(false);
+                    $("#field").addClass("error");
+                    if ($('#must2').length == 0){
+                    $(".must").after('<p class="email__error" id="must2">Email не совпадает </p>');
+                    };
+
+                };
+            }
+        })
+    })
+</script>
+<script>
+      MicroModal.show('edit-profile-success');
+</script>
 {% endblock %}
